--- a/index.html
+++ b/index.html
@@ -1,11 +1,106 @@
-<!DOCTYPE html>
-<html lang="en">
+﻿<!DOCTYPE html>
+<html lang="zh">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title Page</title>
+    <title>个人网站</title>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f8ff;
+        }
+
+        header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 20px 40px;
+            background-color: #fff;
+            border-bottom: 1px solid #eaeaea;
+        }
+
+        header img {
+            width: 100px;
+            height: auto;
+        }
+
+        nav a {
+            margin: 0 10px;
+            text-decoration: none;
+            color: #555;
+            font-size: 16px;
+        }
+
+        .hero {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 80vh;
+            background-color: #dce7ff;
+            color: #333;
+            text-align: center;
+            padding: 20px;
+        }
+
+        .hero h1 {
+            font-size: 40px;
+            font-weight: bold;
+            margin-bottom: 10px;
+        }
+
+        .hero p {
+            font-size: 18px;
+            margin-bottom: 20px;
+        }
+
+        .button {
+            padding: 10px 20px;
+            font-size: 16px;
+            color: #fff;
+            background-color: #4f86f7;
+            border: none;
+            cursor: pointer;
+            border-radius: 5px;
+        }
+
+        .button:hover {
+            background-color: #3d72c3;
+        }
+
+        footer {
+            text-align: center;
+            padding: 10px 0;
+            background-color: #fff;
+            border-top: 1px solid #eaeaea;
+        }
+    </style>
 </head>
 <body>
-    <h1>Welcome to My XiaoMi YU7!</h1>
+    <header>
+        <img src="logo.png" alt="Logo">
+        <nav>
+            <a href="#">关于我</a>
+            <a href="#">技能特长</a>
+            <a href="#">工作经历</a>
+            <a href="#">联系方式</a>
+        </nav>
+        <button class="button">下载简历</button>
+    </header>
+
+    <section class="hero">
+        <div>
+            <h1>你好，我是前程明ming</h1>
+            <p>全栈开发工程师 / UI 设计师 / 产品经理</p>
+            <p>拥有 8 年互联网产品开发经验，专注于用户体验设计和技术创新。热衷于将创意转化为实际产品，善于跨团队协作。</p>
+            <button class="button">了解更多</button>
+            <button class="button">联系我</button>
+        </div>
+    </section>
+
+    <footer>
+        <p>&copy; 2025 前程明ming. All rights reserved.</p>
+    </footer>
 </body>
 </html>
